Rollover edit transitions. Fixed edit z-index

--- a/www/css/dsi4eu.css
+++ b/www/css/dsi4eu.css
@@ -3185,7 +3185,8 @@ strong {
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 9999;
+  z-index: auto;
+  opacity: 0;
   cursor: pointer;
 }
 
@@ -3193,6 +3194,8 @@ strong {
   position: absolute;
   top: 10px;
   right: 10px;
+  display: block;
+  opacity: 0;
   cursor: pointer;
 }
 
